# maas-code-reviewer

./: AGENTS.md  Makefile  README.md  SPEC.md  pyproject.toml
src/lp_ci_tools/: cli.py  git.py  github_client.py  launchpad_client.py  llm_client.py  main.py  models.py  real_launchpad_client.py  review_schema.py  reviewer.py
src/maas_code_reviewer/: cli.py  git.py  launchpad_client.py  llm_client.py  repo_tools.py  review_schema.py  reviewer.py
tests/: conftest.py  factory.py  fake_git.py  fake_github.py  fake_launchpad.py  fake_launchpadlib.py  fake_llm.py  test_cli.py  test_fakes.py  test_git.py  test_github_client.py  test_launchpad_client.py  test_models.py  test_real_launchpad_client.py  test_repo_tools.py  test_review_schema.py  test_reviewer.py
