[project]
name = "lp-ci-tools"
version = "0.1.0"
description = "CI tools that interact with Launchpad."
readme = "README.md"
authors = [
    { name = "MAAS Developers" }
]
requires-python = ">=3.13"
dependencies = [
    "keyring>=25.7.0",
    "launchpadlib>=2.1.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
lp-ci-tools = "lp_ci_tools.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
