[project]
name = "lp-ci-tools"
version = "0.1.0"
description = "CI tools that interact with Launchpad."
readme = "README.md"
authors = [
    { name = "MAAS Developers" }
]
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "keyring",
    "launchpadlib",
]

[project.scripts]
lp-ci-tools = "lp_ci_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff>=0.15.2",
    "ty>=0.0.1a7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["src/lp_ci_tools", "tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def _check_protocol_compliance",
    "raise NotImplementedError",
    "if __name__",
    "raised = False",
]
show_missing = true
skip_covered = true
